# chess_gui

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/cli/: _TODO.cpp
src/engine/: Engine.cpp  Engine.hpp
src/game/: AttackTables.cpp  AttackTables.hpp  Bitboard.hpp  Game.cpp  Game.hpp  Move.cpp  Move.hpp  Piece.cpp  Piece.hpp  Utils.cpp  Utils.hpp
src/gui/: Board.cpp  Board.hpp
tests/: CMakeLists.txt  Perft.cpp  Perft.hpp  engineSpeedTest.cpp  num_positions.cpp  perftTestSuite.cpp
